css/main.css
/* ... */
.btn-vk.active,
.btn-vk:active,
.open>.dropdown-toggle.btn-vk {
	color: #fff;
	background-color: #466482;
	border-color: rgba(0, 0, 0, .2)
}

.btn-vk.active.focus,
.btn-vk.active:focus,
.btn-vk.active:hover,
.btn-vk:active.focus,
.btn-vk:active:focus,
.btn-vk:active:hover,
.open>.dropdown-toggle.btn-vk.focus,
.open>.dropdown-toggle.btn-vk:focus,
.open>.dropdown-toggle.btn-vk:hover {
	color: #fff;
	background-color: #3a526b;
	border-color: rgba(0, 0, 0, .2)
}

.btn-vk.active,
.btn-vk:active,
.open>.dropdown-toggle.btn-vk {
	background-image: none
}

.btn-vk.disabled.focus,
.btn-vk.disabled:focus,
.btn-vk.disabled:hover,
.btn-vk[disabled].focus,
.btn-vk[disabled]:focus,
.btn-vk[disabled]:hover,
fieldset[disabled] .btn-vk.focus,
fieldset[disabled] .btn-vk:focus,
fieldset[disabled] .btn-vk:hover {
	background-color: #587ea3;
	border-color: rgba(0, 0, 0, .2)
}

.btn-vk .badge {
	color: #587ea3;
	background-color: #fff
}

.btn-yahoo {
	color: #fff;
	background-color: #720e9e;
	border-color: rgba(0, 0, 0, .2)
}

.btn-yahoo.focus,
.btn-yahoo:focus {
	color: #fff;
	background-color: #500a6f;
	border-color: rgba(0, 0, 0, .2)
}

.btn-yahoo:hover {
	color: #fff;
	background-color: #500a6f;
	border-color: rgba(0, 0, 0, .2)
}

.btn-yahoo.active,
.btn-yahoo:active,
.open>.dropdown-toggle.btn-yahoo {
	color: #fff;
	background-color: #500a6f;
	border-color: rgba(0, 0, 0, .2)
}

.btn-yahoo.active.focus,
.btn-yahoo.active:focus,
.btn-yahoo.active:hover,
.btn-yahoo:active.focus,
.btn-yahoo:active:focus,
.btn-yahoo:active:hover,
.open>.dropdown-toggle.btn-yahoo.focus,
.open>.dropdown-toggle.btn-yahoo:focus,
.open>.dropdown-toggle.btn-yahoo:hover {
	color: #fff;
	background-color: #39074e;
	border-color: rgba(0, 0, 0, .2)
}

.btn-yahoo.active,
.btn-yahoo:active,
.open>.dropdown-toggle.btn-yahoo {
	background-image: none
}

.btn-yahoo.disabled.focus,
.btn-yahoo.disabled:focus,
.btn-yahoo.disabled:hover,
.btn-yahoo[disabled].focus,
.btn-yahoo[disabled]:focus,
.btn-yahoo[disabled]:hover,
fieldset[disabled] .btn-yahoo.focus,
fieldset[disabled] .btn-yahoo:focus,
fieldset[disabled] .btn-yahoo:hover {
	background-color: #720e9e;
	border-color: rgba(0, 0, 0, .2)
}

.btn-yahoo .badge {
	color: #720e9e;
	background-color: #fff
}

#pagination 
ul li {
    display: inline-block;
}
     
.container1{
 text-align: center;
}
.pagination {
	display: inline-block;
	padding-left: 0;
	margin: 20px 0;
	border-radius: 4px;
	align-items: center;
}

.pagination>li {
	display: inline
}

.pagination>li>a,
.pagination>li>span {
	position: relative;
	float: left;
	padding: 6px 12px;
	margin-left: -1px;
	line-height: 1.42857143;
	color: #337ab7;
	text-decoration: none;
	background-color: #fff;
	border: 1px solid #ddd
}

.pagination>li>a:focus,
.pagination>li>a:hover,
.pagination>li>span:focus,
.pagination>li>span:hover {
	z-index: 2;
	color: #23527c;
	background-color: #eee;
	border-color: #ddd
}

.pagination>li:first-child>a,
.pagination>li:first-child>span {
	margin-left: 0;
	border-top-left-radius: 4px;
	border-bottom-left-radius: 4px
}

.pagination>li:last-child>a,
.pagination>li:last-child>span {
	border-top-right-radius: 4px;
	border-bottom-right-radius: 4px
}

.pagination>.active>a,
.pagination>.active>a:focus,
.pagination>.active>a:hover,
.pagination>.active>span,
.pagination>.active>span:focus,
.pagination>.active>span:hover {
	z-index: 3;
	color: #fff;
	cursor: default;
	background-color: #337ab7;
	border-color: #337ab7
}

.pagination>.disabled>a,
.pagination>.disabled>a:focus,
.pagination>.disabled>a:hover,
.pagination>.disabled>span,
.pagination>.disabled>span:focus,
.pagination>.disabled>span:hover {
	color: #777;
	cursor: not-allowed;
	background-color: #fff;
	border-color: #ddd
}

.pagination-lg>li>a,
.pagination-lg>li>span {
	padding: 10px 16px;
	font-size: 18px;
	line-height: 1.3333333
}

.pagination-lg>li:first-child>a,
.pagination-lg>li:first-child>span {
	border-top-left-radius: 6px;
	border-bottom-left-radius: 6px
}

.pagination-lg>li:last-child>a,
.pagination-lg>li:last-child>span {
	border-top-right-radius: 6px;
	border-bottom-right-radius: 6px
}

.pagination-sm>li>a,
.pagination-sm>li>span {
	padding: 5px 10px;
	font-size: 12px;
	line-height: 1.5
}

.pagination-sm>li:first-child>a,
.pagination-sm>li:first-child>span {
	border-top-left-radius: 3px;
	border-bottom-left-radius: 3px
}

.pagination-sm>li:last-child>a,
.pagination-sm>li:last-child>span {
	border-top-right-radius: 3px;
	border-bottom-right-radius: 3px
}
body {
	font-family: Arial, Helvetica, sans-serif;
	margin: 0;
  }
  
  html{
	box-sizing: border-box;
  }
  
  *, *:before, *:after {
	box-sizing: inherit;
  }
  
  .column4{
	float: left;
	width: 25%;
	margin-bottom: 16px;
	padding: 0 8px;
	padding-left: 20px;
	padding-right: 20px;
	
  }
  
  .card1 {
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
	margin: 8px;
	color: white;
	
  }
  
  .about-section {
	padding: 50px;
	text-align: center;
	background-color: #000000;
	color: white;
  }
  
  .container1 {
	padding: 0 16px;
	background-color: white;
	color: black;
	
  }
  
  .container1::after, .row::after {
	content: "";
	clear: both;
	display: table;
	background-color: white;
	
  }
  
  .title {
	color: grey;
  }
  

  .button1 {
	border: none;
	outline: 0;
	display: inline-block;
	/* padding: 1px; */
	color: white;
	background-color: #28a745;
	border-color: #28a745;
	text-align: center;
	cursor: pointer;
	width: 100%;
  }
  
  .button1:hover {
	background-color: #218838;
	border-color: #1e7e34
  }
  
  @media screen and (max-width: 650px) {
	.column {
	  width: 100%;
	  display: block;
	  color: white;
	}
  }


  
.row1 {
	color: white;
}

.feedback {
	padding-left: 75px; 
}

